# sre-agent-sandbox

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  baseline_eval.py  baseline_inference.py  chaos_engine.py  client.py  inference.py  openenv.yaml  pyproject.toml  renderer.py  reward.py  simulated_system.py  tasks.py
.factory/: init.sh  services.yaml
.factory/research/: openenv-api.md
.factory/skills/env-worker/: SKILL.md
.factory/skills/server-worker/: SKILL.md
.factory/validation/core-environment/scrutiny/: synthesis.json
.factory/validation/core-environment/scrutiny/reviews/: chaos-engine.json  project-scaffolding.json  (+5 more)
.factory/validation/core-environment/user-testing/: synthesis.json  synthesis.round1.json
.factory/validation/misc-fixes-1/scrutiny/: synthesis.json
.factory/validation/misc-fixes-1/user-testing/: synthesis.json
.factory/validation/server-docker-demo/scrutiny/: synthesis.json
.factory/validation/server-docker-demo/user-testing/: synthesis.json  synthesis.round1.json
demo/: __init__.py  run_demo.py
docs/: restructuring-plan.md
server/: app.py  environment.py
sre_agent_sandbox/: __init__.py  baseline_eval.py  baseline_inference.py  chaos_engine.py  models.py  renderer.py  reward.py  simulated_system.py  tasks.py
sre_agent_sandbox/demo/: __init__.py  run_demo.py
sre_agent_sandbox/server/: Dockerfile  __init__.py  app.py  environment.py
tests/: test_chaos_engine.py  test_demo.py  test_environment.py  test_models.py  test_renderer.py  test_reward.py  test_server.py  test_simulated_system.py  test_tasks.py
(+16 files in other folders)
